trying to fix some positioning problems of the slide-nav-menu on desktop

--- a/styles.css
+++ b/styles.css
@@ -635,7 +635,7 @@ pre::-webkit-scrollbar-corner {
 }
 
 .slide-nav-menu {
-    position: fixed;
+    position: absolute;
     bottom: -300px; /* Hidden initially */
     left: 0;
     width: 100%;
