--- a/styles.css
+++ b/styles.css
@@ -695,6 +695,8 @@ pre::-webkit-scrollbar-corner {
     align-items: center;
     scrollbar-width: thin;
     scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+    scroll-snap-type: mandatory x;
+    scroll-snap-align: left;
     position: relative;
 }
 
