--- a/styles.css
+++ b/styles.css
@@ -353,8 +353,8 @@ pre::-webkit-scrollbar-corner {
 /* --- CONTROLS & COUNTER --- */
 .controls {
     position: absolute;
-    bottom: 30px;
-    right: 40px;
+    bottom: 60px;
+    right: 60px;
     display: flex;
     gap: 20px;
     z-index: 20;
@@ -512,23 +512,23 @@ pre::-webkit-scrollbar-corner {
 
     .controls {
         position: fixed;
-        bottom: 20px;
+        bottom: 40px;
         right: 20px;
-        background: rgba(0, 0, 0, 0.8);
         padding: 10px;
         border-radius: 12px;
-        backdrop-filter: blur(5px);
+        /* backdrop-filter: blur(3px); */
     }
 
     .slide-counter {
         position: fixed;
-        bottom: 25px;
+        bottom: 20px;
         left: 20px;
     }
 
     .nav-btn {
         padding: 10px 16px;
         font-size: 0.9rem;
+        backdrop-filter: blur(3px);
     }
 }
 
